# alpha-omega

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFESTO.md  README.md  ao.py  pyproject.toml
.alpha-omega/: .gitignore  INDEX.md  decisions.md
.alpha-omega/debates/: ao_1776035988.md  ao_1776036041.md  ao_1776037709.md  ao_1776040582.md  ao_1776040589.md  ao_1776040596.md  ao_1776081171.md  ao_1776081941.md  ao_1776083434.md  ao_1776084685.md  ao_1776086098.md  ao_1776087411.md  ao_1776087791.md  ao_1776090176.md
.alpha-omega/reviews/: aor_1776085171.json  aor_1776089933.json
.alpha-omega/sessions/: ao_1776081941.json  ao_1776083434.json  ao_1776084685.json  ao_1776086098.json  ao_1776087411.json  ao_1776087791.json  ao_1776090176.json
alpha_omega/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  context_builder.py  memory.py  primitives.py  protocol.py  review.py  sigma.py
core/: __init__.py  artifacts.py  context_builder.py
tests/: test_cli_implement.py
